@@ -212,6 +212,7 @@ The following people are not part of the development team, but have been contrib
 * (zzril)
 * Ernest Elgin (eaeiv)
 * Ernest Wong (ErnWong)
+* Joel H. (HtotheTML)
 
 
 ## Toolchain
