@@ -65,6 +65,7 @@
 - Fix: [#19493] SV4 saves not importing the correct vehicle colours.
 - Fix: [#19517] Crash when peeps try to exit or enter hacked rides that have no waypoints specified.
 - Fix: [#19524] Staff counter shows incorrect values if there are more than 32767 staff members.
+- Fix: [#19641] Missing water tile in Infernal Views' river.
 
 0.4.3 (2022-12-14)
 ------------------------------------------------------------------------
